:sparkles: 요약 검색 AI 전체 흐름 구조 조정